# context-switch

./: .env.example  .gitignore  .gitmodules  .harper-dictionary.txt  CONTEXT.md  Cargo.toml  LICENSE  README.md  justfile
.github/: copilot-instructions.md
.github/workflows/: context-switch.yml
audio-knife/: Cargo.toml
audio-knife/src/: app_error.rs  event_scheduler.rs  main.rs  mod_audio_fork.rs  server_event_distributor.rs  server_event_router.rs  server_event_splitter.rs
audio-test/: Cargo.toml  README.md
audio-test/src/: main.rs
core/: Cargo.toml
core/src/: audio.rs  billing_collector.rs  billing_context.rs  conversation.rs  dialog.rs  duration.rs  endpoint.rs  language.rs  lib.rs  protocol.rs  registry.rs  segment.rs  service.rs  speech_gate.rs  synthesize.rs  transcribe.rs  turn_detection.rs
docs/adr/: 0001-turn-detection-provider-specific-fields.md  0002-partial-text-input.md  0003-elevenlabs-multi-context-synthesis.md
endpoints/azure/: Cargo.toml
endpoints/azure-transcribe/: Cargo.toml
endpoints/azure-transcribe/src/: lib.rs
endpoints/azure/src/: lib.rs  synthesize.rs  synthesize_service.rs  transcribe.rs
endpoints/google-transcribe/: Cargo.toml
endpoints/google-transcribe/src/: lib.rs
endpoints/openai-dialog/: Cargo.toml
endpoints/openai-dialog/src/: lib.rs
examples/: aristech-synthesize.rs  aristech-transcribe.rs  azure-container.rs  azure-synthesize.rs  azure-transcribe.rs  azure-translate.rs  demo.rs  dialog.rs  elevenlabs-transcribe.rs  endpoint.rs  openai-dialog.rs  openai.rs  openai.rs_  service.rs  synthesize.rs  transcribe.rs
examples/dialog_providers/: azure_openai.rs  google.rs  google_agent_platform.rs  mod.rs  openai.rs
filter-test/: Cargo.toml
filter-test/src/: main.rs
services/aristech/: Cargo.toml
services/aristech/src/: lib.rs  synthesize.rs  transcribe.rs
services/azure/: Cargo.toml
services/azure-transcribe/: Cargo.toml
services/azure-transcribe/src/: lib.rs
services/azure/src/: host.rs  lib.rs  synthesize.rs  transcribe.rs  translate.rs
services/deepgram/: Cargo.toml
services/deepgram/src/: lib.rs  transcribe.rs
services/elevenlabs/: Cargo.toml
services/elevenlabs/src/: lib.rs  synthesize.rs  transcribe.rs  ws.rs
services/google-dialog/: Cargo.toml
services/google-dialog/src/: client.rs  conversation_state.rs  lib.rs  types.rs
services/google-transcribe/: Cargo.toml
services/google-transcribe/src/: client.rs  lib.rs  transcribe.rs
services/microsoft-voice-live/: Cargo.toml
services/microsoft-voice-live/src/: client.rs  host.rs  lib.rs  transcribe.rs  transcription.rs
services/openai-dialog/: Cargo.toml
services/openai-dialog/src/: client.rs  host.rs  lib.rs  transcription.rs  types.rs
services/playback/: Cargo.toml
services/playback/src/: lib.rs  stream_reader.rs
src/: api.rs  audio_tracer.rs  context_switch.rs  conversation_controller.rs  endpoint.rs  lib.rs  protocol.rs  registry.rs  server.rs  speech_gate.rs  tests.rs
src/endpoints/: azure_transcribe.rs  mod.rs
