[package]
name = "context-switch"
version.workspace = true
edition.workspace = true
rust-version = "1.94"

[workspace]
members = [ 
    "audio-knife", 
    "audio-test",
    "core",
    "filter-test",
    "services/aristech",
    "services/azure",
    "services/elevenlabs",
    "services/google-dialog",
    "services/google-transcribe", 
    "services/openai-dialog", 
    "services/playback",
]

[workspace.package]
version = "3.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/pragmatrix/context-switch"

[dependencies]

# ours

context-switch-core = { workspace = true }

openai-dialog = { path = "services/openai-dialog" }
google-dialog = { workspace = true }
azure = { workspace = true }
azure-speech = { workspace = true }
aristech = { workspace = true }
elevenlabs = { workspace = true }
google-transcribe = { workspace = true }

# basic

static_assertions = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
tracing = {workspace = true }
futures = "0.3.31"
derive_more = { workspace = true }

# serialization / async runtime

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing-futures = "0.2.5"

# TODO: Is this needed?
uuid = { workspace = true }

# audio tracing
hound = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
context-switch-core = { workspace = true }

dotenvy = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }

# audio input
cpal = "0.17.3"
rodio = { workspace = true, features = ["playback"] }

azure = { workspace = true }
aristech = { workspace = true }
google-transcribe = { workspace = true }
google-dialog = { workspace = true }
gemini-live = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread"] }
reqwest = { workspace = true }

# For advanced parameters in `openai-dialog`
openai-api-rs = { workspace = true }
serde_json = { workspace = true }
chrono-tz = { version = "0.10.3" }
url = { workspace = true }
strum = { version = "0.28" }


# For recognizing audio files in azure-transcribe.
playback = { path = "services/playback" }

[workspace.dependencies]
tracing-subscriber = { version = "0.3.23" }

context-switch-core = { path = "core" }
azure = { path = "services/azure" }
playback = { path = "services/playback" }
aristech = { path = "services/aristech" }
elevenlabs = { path = "services/elevenlabs" }
google-transcribe = { path = "services/google-transcribe" }
google-dialog = { path = "services/google-dialog" }
gemini-live = { path = "external/gemini-live-rs/crates/gemini-live" }

# Dependencies required by `external/gemini-live-rs/crates/gemini-live`.
# The submodule crate inherits these via `workspace = true`, so we keep them
# centralized here and grouped to make future sync/review straightforward.
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.32"
bytes = "1.11"
thiserror = "2.0.18"
rustls = { version = "0.23", features = ["ring"], default-features = false }
google-cloud-auth = { version = "1.10.0", default-features = false }

anyhow = "1.0.102"
derive_more = { version = "2.1.1", features = ["full"] }
static_assertions = "1.1.0"
async-stream = { version = "0.3.6" }
# Tokio features are intentionally explicit:
# - `sync`: channels/mutexes used throughout services
# - `rt` + `macros`: runtime and `tokio::select!`/task macros used by `gemini-live`
# - `time`: timeout/sleep used by `gemini-live` session/transport logic
tokio = { version = "1.52.3", features = ["sync", "rt", "macros", "time"] }
futures = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"
async-fn-stream = "0.3.2"
async-trait = "0.1.83"
tracing = "0.1.41"
dotenvy = { version = "0.15.7" }
url = { version = "2.5.8" }
reqwest = { version = "0.13.3" }
mime_guess2 = { version = "2.3.1" }
hound = { version = "3.5.1" }
chrono = { version = "0.4.44" }

#
# external dependencies.
#

azure-speech = { path = "external/azure-speech-sdk-rs" }
openai-api-rs = { path = "external/openai-api-rs" }
# - `symphonia-wav` is mandatory: The default WAV decoder does not seem to support A-Law and
#    panics with a few of our test cases.
# - No default features because we don't want to pull alsa on Linux by default for local playback.
# - We have to define at least _one_ decoder, otherwise `cargo clippy --all-targets` fails, so we select `symphonia-mp3`.
rodio = { version = "0.22.2", default-features = false, features = ["symphonia-mp3"] }

rstest = { version = "0.26.1" }
uuid = { version = "1.23.1", features = ["v4"] }
