[package]
name = "audio-knife"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

context-switch = { path = ".." }
context-switch-core = { workspace = true }

axum = { version = "0.7.9", features = ["ws"] }
reqwest = { version = "0.12.5" }

tracing-subscriber = { version = "0.3.19" }
futures-util = { version = "0.3.31" }
