[package]
name = "audio-knife"
version = "1.4.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
reqwest = { workspace = true }
uuid = { workspace = true }

futures-util = { version = "0.3.31" }
axum = { version = "0.7.9", features = ["ws"] }

#
# ours
#

context-switch = { path = ".." }
playback = { workspace = true }