[package]
name = "audio-test"
version = "0.1.0"
edition = "2024"

[dependencies]
context-switch-core = { path = "../core" }
anyhow = { workspace = true }
clap = { version = "4.4.18", features = ["derive"] }
walkdir = "2.5.0"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = "0.3.23"
indicatif = "0.18.4"

playback = { workspace = true }