[package]
name = "context-switch-core"
version = "2.0.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }

serde = { workspace = true }
# For function calling parameters.
serde_json = { workspace = true }