[package]
name = "context-switch-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }

serde = { workspace = true }
# For function calling parameters.
serde_json = { workspace = true }
isolang = "2.4.0"
oxilangtag = "0.1.5"