[package]
name = "filter-test"
version = "0.1.0"
edition = "2024"

[dependencies]
context-switch = { path = ".." }
symphonia = { version = "0.5.3", features = ["mp3", "wav"] }
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1.0.75"
hound = "3.5.1"
path-absolutize = "3.1.1"
fundsp = "0.16.0"
