[package]
name = "azure-transcribe"
version = "0.1.0"
edition = "2021"

[dependencies]
hound = "3.5.1"
azure-speech = { workspace = true }

anyhow = { workspace = true }
futures = { workspace = true }
context-switch-core = { workspace = true }
async-stream = { workspace = true }
url = { workspace = true }