[package]
name = "azure-transcribe"
version = "0.1.0"
edition = "2021"

[dependencies]
context-switch-core = { workspace = true }

hound = "3.5.1"
azure-speech = { workspace = true }

anyhow = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
