[package]
name = "aristech"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
context-switch-core = { workspace = true }
aristech-stt-client = "3.1.2"
aristech-tts-client = "1.0.9"
tokio-stream = "0.1.17"
tonic = { version = "0.14.1" }
tracing = { workspace = true }