[package]
name = "cs-azure"
version = "0.1.0"
edition = "2024"

[dependencies]
context-switch-core = { workspace = true }

azure-speech = { workspace = true }

tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
serde = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
hound = { version = "3.5.1" }