[package]
name = "deepgram-service"
version = "0.1.0"
edition.workspace = true

[dependencies]
context-switch-core = { workspace = true }

deepgram = "0.10.0"

anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
