[package]
name = "elevenlabs"
version = "0.1.0"
edition = "2024"

[dependencies]
context-switch-core = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.28.0", features = ["connect", "native-tls"] }
tracing = { workspace = true }
url = { workspace = true }
