[package]
name = "google-dialog"
version = "0.1.0"
edition.workspace = true

[dependencies]
context-switch-core = { workspace = true }

gemini-live = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
