[package]
name = "microsoft-voice-live"
version = "0.1.0"
edition.workspace = true

[dependencies]
context-switch-core = { workspace = true }

openai-api-rs = { workspace = true }

tokio-tungstenite = { version = "0.29.0", features = ["connect", "native-tls"] }

tracing = { workspace = true }

anyhow = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["net"] }
serde_json = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
url = { workspace = true }
