[package]
name = "openai-dialog"
version = "0.1.0"
edition = "2024"

[dependencies]
context-switch-core = { workspace = true }

openai-api-rs = { workspace = true }

tokio-tungstenite = { version = "0.26.2", features = ["connect", "native-tls"] }

tracing = { workspace = true }

anyhow = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["net"] }
serde_json = { workspace = true }
async-stream = { workspace = true }
async-fn-stream = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
