[package]
name = "playback"
version = "0.1.0"
edition = "2024"

[dependencies]
context-switch-core = { workspace = true }

tracing = { workspace = true }

anyhow = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["net"] }
async-trait = { workspace = true }

# mediatype = { workspace = true }
url = { workspace = true }
rodio  = { workspace = true }
