[package]
name = "playback"
version = "0.1.0"
edition = "2024"

[dependencies]
context-switch-core = { workspace = true }

tracing = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["net"] }
async-trait = { workspace = true }

# mediatype = { workspace = true }
url = { workspace = true }
rodio = { workspace = true, features = ["symphonia-wav", "symphonia-mp3"] }
reqwest = { workspace = true, features = ["stream"] } # Added "stream" feature for bytes_stream
mime_guess2 = { workspace = true }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] } # Added futures-util for StreamExt
bytes = "1.10.1" # Added bytes for Bytes type

[dev-dependencies]
rstest = { workspace = true }